# AI-Resume-Analyzer

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: documentation.yml
about/: index.html
app/: app.py
app/backend/: analysis.py  pdf_ingestion.py  templates.py  vector_store.py
app/frontend/: chat_interface.py  main_app.py  prompts.py
docs/: about.md  index.md  what-i-learned.md
getting_started/: index.html
llm_overview/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: about.md  getting_started.md  index.md  llm_overview.md  reason-for-project.md  resources.md
reason-for-project/: index.html
resources/: index.html
search/: search_index.json
what-i-learned/: index.html
